logs/participationgraphs.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/participationgraphs'...
Listing './lib/python3.5/site-packages/participationgraphs/templatetags'...
Compiling './lib/python3.5/site-packages/participationgraphs/templatetags/githubgraphs.py'...
***   File "./lib/python3.5/site-packages/participationgraphs/templatetags/githubgraphs.py", line 40
    raise template.TemplateSyntaxError, 'github_participation_graph: third\
                                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/participationgraphs/utils'...
Compiling './lib/python3.5/site-packages/participationgraphs/utils/github.py'...
***   File "./lib/python3.5/site-packages/participationgraphs/utils/github.py", line 74
    raise ValueError, "no data for user '%s' and project '%s'" % (username,
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/participationgraphs-0.1.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
